# travesim

./: .all-contributorsrc  .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  CHANGELOG.pt-br.md  CONTRIBUTING.md  CONTRIBUTING.pt-br.md  LICENSE  Makefile  README.md  README.pt-br.md
.github/workflows/: build.yml
controllers/camera_controller/: camera_controller.py
controllers/common/include/travesim_webots/: message.hpp
controllers/referee_controller/: CMakeLists.txt  Makefile  referee_controller.cpp
controllers/referee_controller/adapters/: CMakeLists.txt
controllers/referee_controller/adapters/include/ros/: console.h
controllers/referee_controller/adapters/include/travesim_adapters/data/: field_state.hpp  team_command.hpp
controllers/referee_controller/adapters/include/travesim_adapters/protobuf/: replacer_receiver.hpp
controllers/referee_controller/adapters/proto/: README.md
controllers/referee_controller/adapters/src/lib/protobuf/: replacer_receiver.cpp
controllers/referee_controller/adapters/src/lib/udp/: receiver.cpp
controllers/referee_controller/include/: Robot.hpp
controllers/referee_controller/include/travesim_webots/: robot.hpp
controllers/referee_controller/src/: Robot.cpp  robot.cpp
controllers/referee_controller/test/: command_sender.test.cpp
controllers/sample_controller/: sample_controller.py
controllers/vss_robot_controller/: CMakeLists.txt  Makefile  vss_robot_controller.cpp
protos/: GenericVssRobot.proto  VssBall.proto  VssCamera.proto  VssField.proto  VssReferee.proto
worlds/: .Match3v3.wbproj  Match3v3.wbt  Match3v3WithCamera.wbt  RobotDev.wbt  vss_field.wbt
